--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
     <div class="container mx-auto px-6 text-center">
       <div class="grid md:grid-cols-2 gap-12 items-center">
         <div class="text-left">
-          <h1 class="text-5xl md:text-7xl font-bold text-white leading-tight">Soumya Malviya</h1>
-          <p class="text-xl md:text-2xl text-[#a08b74] font-semibold mt-2 mb-4">AI Engineer & Full-Stack Developer</p>
+          <h1 class="text-5xl md:text-7xl font-bold text-white leading-tight">Hey There!</h1>
+          <p class="text-xl md:text-2xl text-[#a08b74] font-semibold mt-2 mb-4">Soumya here , Electrical Engineer from IIT Gandhinagar</p>
           <p id="hero-subtitle" class="text-lg md:text-xl text-gray-300 mt-4 max-w-lg">
             <!-- This text is dynamically injected by JavaScript -->
           </p>
@@ -139,7 +139,7 @@
             <img src="https://placehold.co/150x150/f0e9d2/1a1a1a?text=SM" alt="Soumya Malviya Portrait" class="w-40 h-40 rounded-full mx-auto md:mx-0 mb-6 border-4 border-[#8b735b]">
             <h3 class="text-3xl font-bold text-white mb-4">Thinking Several Moves Ahead</h3>
             <p class="text-gray-300 leading-relaxed">
-              I'm Soumya Malviya, an engineer who builds systems that balance creative strategy with robust implementation. My passion lies in architecting solutions that are not just functional but also elegant and forward-thinking, much like a well-played chess game.
+              I am an Electrical Engineering student at IIT Gandhinagar with interests spanning AI, network science, and signal processing. My work includes developing AI-driven platforms, experimenting with diffusion models, and analyzing complex systems. I enjoy combining theory with hands-on projects to create impactful solutions, always aiming for clarity, efficiency, and relevance.
             </p>
           </div>
           <div class="space-y-8">
