--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,400;0,700;1,400&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
   <style>
     :root{
       --board-size: 320px;
@@ -22,8 +22,8 @@
     }
     @media (min-width: 768px){ :root{ --board-size: 420px; } }
 
-    body { font-family: 'Inter', sans-serif; background-color: #1a1a1a; color: #f0e9d2; }
-    h1, h2, h3, h4, h5, h6 { font-family: 'Lora', serif; }
+    body { font-family: 'Merriweather', serif; background-color: #1a1a1a; color: #f0e9d2; }
+    h1, h2, h3, h4, h5, h6 { font-family: 'Playfair Display', serif; }
 
     .chess-bg{
       background-image:
