--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
     <div class="container mx-auto px-6 text-center">
       <div class="grid md:grid-cols-2 gap-12 items-center">
         <div class="text-left">
-          <h1 class="text-5xl md:text-7xl font-bold text-white leading-tight">Hey There!</h1>
-          <p class="text-xl md:text-2xl text-[#a08b74] font-semibold mt-2 mb-4">Soumya here , Electrical Engineer from IIT Gandhinagar</p>
-          <p id="hero-subtitle" class="text-lg md:text-xl text-gray-300 mt-4 max-w-lg">
+          <h1 class="text-4xl sm:text-5xl md:text-7xl font-bold text-white leading-tight">Hey There!</h1>
+          <p class="text-lg sm:text-xl md:text-2xl text-[#a08b74] font-semibold mt-2 mb-4">Soumya here , Electrical Engineer from IIT Gandhinagar</p>
+          <p id="hero-subtitle" class="text-base sm:text-lg md:text-xl text-gray-300 mt-4 max-w-lg">
             <!-- This text is dynamically injected by JavaScript -->
           </p>
           <a href="#projects" class="mt-8 inline-block bg-[#8b735b] text-white px-8 py-3 rounded-md text-lg hover:bg-[#a08b74] transition shadow-lg">View Projects</a>
@@ -579,3 +579,4 @@
   </script>
 </body>
 </html>
+
